test/expected/cli/located_soft_errors.out
== alias:
shit: 1:1: error: Builtin 'alias': The alias 'missing_name' was not found.
     1 |  alias missing_name
       |  ^~~~~~~~~~~~~~~~~~ here.
rc=1
== hash:
shit: 1:1: error: Builtin 'hash': The command 'missing_name' was not found.
     1 |  hash missing_name
       |  ^~~~~~~~~~~~~~~~~ here.
rc=1
== command verbose:
shit: 1:1: error: Builtin 'command': The command 'missing_name' was not found.
     1 |  command -V missing_name
       |  ^~~~~~~~~~~~~~~~~~~~~~~ here.
rc=1
== jobspec:
shit: 1:1: error: Builtin 'jobs': Unable to list the job '%999' because no such job exists.
     1 |  jobs %999
       |  ^~~~~~~~~ here.
rc=1
== timeout command:
shit: 1:1: error: timeout: command 'missing_name' was not found.
     1 |  shitbox timeout 1 missing_name
       |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ here.
rc=127
